--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "archiver": "^7.0.1",
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "fs-extra": "^11.3.0",
+    "nodemon": "^3.1.10",
+    "tmp-promise": "^3.0.3"
   }
 }
